syntax = "proto3";

package mangahub.v1;

option go_package = "mangahub/pkg/grpc/mangapb;mangapb";

message Manga {
  string id = 1;
  string title = 2;
  string author = 3;
  repeated string genres = 4;
  string status = 5;
  int32 total_chapters = 6;
  string description = 7;
  string cover_url = 8;
}

message ListMangaRequest {
  string q = 1;
  repeated string genres = 2;
  string status = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message ListMangaResponse {
  int32 total = 1;
  int32 limit = 2;
  int32 offset = 3;
  repeated Manga items = 4;
}

message GetMangaRequest {
  string id = 1;
}

message GetMangaResponse {
  Manga manga = 1;
}

service MangaService {
  rpc ListManga(ListMangaRequest) returns (ListMangaResponse);
  rpc GetManga(GetMangaRequest) returns (GetMangaResponse);
}

message ProgressItem {
  string user_id = 1;
  string manga_id = 2;
  int32 current_chapter = 3;
  string status = 4;
  int64 updated_at_unix = 5;
}

message ListProgressRequest {
  string user_id = 1;
  string status = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message ListProgressResponse {
  int32 total = 1;
  int32 limit = 2;
  int32 offset = 3;
  repeated ProgressItem items = 4;
}

message GetProgressRequest {
  string user_id = 1;
  string manga_id = 2;
}

message GetProgressResponse {
  ProgressItem item = 1;
}

message UpsertProgressRequest {
  string user_id = 1;
  string manga_id = 2;
  int32 current_chapter = 3;
  string status = 4;
}

message UpsertProgressResponse {
  ProgressItem item = 1;
}

message DeleteProgressRequest {
  string user_id = 1;
  string manga_id = 2;
}

message DeleteProgressResponse {
  bool deleted = 1;
}

service ProgressService {
  rpc ListProgress(ListProgressRequest) returns (ListProgressResponse);
  rpc GetProgress(GetProgressRequest) returns (GetProgressResponse);
  rpc UpsertProgress(UpsertProgressRequest) returns (UpsertProgressResponse);
  rpc DeleteProgress(DeleteProgressRequest) returns (DeleteProgressResponse);
}
